--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 ### Project ###
 /public/
 /tmp/
+/dist/
 
 # the npm run ... commands can create this file but we don't want it checked in
 # /.bootstraprc
