--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "lodash": "^4.16.1",
     "moment": "^2.15.1"
   },
+  "peerDependencies": {
+    "handlebars": ">= 1.3.0 < 5"
+  },
   "devDependencies": {
     "babel-core": "^6.14.0",
     "babel-eslint": "^6.1.2",
@@ -34,7 +37,6 @@
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-json": "^1.2.0",
     "extract-text-webpack-plugin": "^1.0.1",
-    "handlebars": "^4.0.5",
     "handlebars-loader": "^1.4.0",
     "html-webpack-plugin": "^2.22.0",
     "webpack": "^2.1.0-beta.25"
