--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "testing webpack",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "rootIndex": "gulp rootIndex",
+    "quark": "gulp task --gulpfile myfile.js"
   },
   "repository": {
     "type": "git",
@@ -24,21 +26,20 @@
     "lodash": "^4.16.1",
     "moment": "^2.15.1"
   },
-  "peerDependencies": {
-    "handlebars": ">= 1.3.0 < 5"
-  },
   "devDependencies": {
     "babel-core": "^6.14.0",
     "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-stage-1": "^6.13.0",
+    "babel-register": "^6.14.0",
     "eslint": "^3.5.0",
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-json": "^1.2.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "handlebars-loader": "^1.4.0",
-    "html-webpack-plugin": "^2.22.0",
-    "webpack": "^2.1.0-beta.25"
+    "gulp": "^3.9.1",
+    "gulp-compile-handlebars": "^0.6.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-util": "^3.0.7",
+    "handlebars": "^4.0.5",
+    "through2": "^2.0.1"
   }
 }
