--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-util": "^3.0.7",
     "handlebars": "^4.0.5",
+    "mime": "^1.3.4",
     "through2": "^2.0.1"
   }
 }
